--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "cucumber": "cucumber-js"
   },
   "author": "Nikita Bezmenov",
   "license": "ISC",
@@ -42,6 +43,7 @@
     "callsites": "^3.1.0",
     "camelcase": "^5.3.1",
     "caniuse-lite": "^1.0.30001488",
+    "chai": "^4.3.7",
     "chalk": "^2.4.2",
     "char-regex": "^1.0.2",
     "chownr": "^1.1.4",
